--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
 java = "17"
 agp = "8.4.1"
-kotlin = "1.9.22"
+kotlin = "1.9.23"
 androidGradlePlugin = "8.2.2"
 core-ktx = "1.13.1"
 junit = "4.13.2"
+androidx-test = "1.5.0"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 android-lifecycle = "2.7.0"
@@ -13,7 +14,7 @@ compose-bom = "2024.05.00"
 compose-navigation = "2.7.7"
 hilt = "2.50"
 retrofit = "2.9.0"
-androidxComposeCompiler = "1.5.9"
+androidxComposeCompiler = "1.5.13"
 kotlinxSerializationJson = "1.6.3"
 paparazzi = "1.3.2"
 
@@ -57,7 +58,7 @@ androidx-test-archcore = { group = "androidx.arch.core", name = "core-testing", 
 turbine = { group = "app.cash.turbine", name = "turbine", version = "1.0.0" }
 mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version = "4.1.0" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version = "1.8.0" }
-androidx-core-ktx = { group = "androidx.test", name = "core-ktx", version = "1.5.0" }
+androidx-core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "androidx-test" }
 paparazzi = { group = "app.cash.paparazzi", name = "paparazzi-gradle-plugin", version.ref = "paparazzi" }
 
 #BuildLogic
