--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ hilt = "2.50"
 retrofit = "2.9.0"
 androidxComposeCompiler = "1.5.13"
 kotlinxSerializationJson = "1.6.3"
+ksp = "2.0.0-1.0.21"
 paparazzi = "1.3.2"
 
 #SDK
@@ -25,6 +26,7 @@ targetSdk = "34"
 
 
 [libraries]
+ksp-gradle-plugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "android-lifecycle" }
@@ -72,6 +74,7 @@ hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 cash-paparazzi = { id = "app.cash.paparazzi", version.ref = "paparazzi" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
 #Convention Plugins
 start-android-application = { id = "start.android.application", version = "unspecified" }
