--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 java = "17"
 agp = "8.4.1"
-kotlin = "1.9.23"
+kotlin = "1.9.22"
 androidGradlePlugin = "8.2.2"
 core-ktx = "1.13.1"
 junit = "4.13.2"
@@ -14,9 +14,9 @@ compose-bom = "2024.05.00"
 compose-navigation = "2.7.7"
 hilt = "2.50"
 retrofit = "2.9.0"
-androidxComposeCompiler = "1.5.13"
+androidxComposeCompiler = "1.5.10" # https://developer.android.com/jetpack/androidx/releases/compose-kotlin#pre-release_kotlin_compatibility
 kotlinxSerializationJson = "1.6.3"
-ksp = "2.0.0-1.0.21"
+ksp = "1.9.22-1.0.17" # works with kotlin version 1.9.22
 paparazzi = "1.3.2"
 
 #SDK
@@ -26,7 +26,7 @@ targetSdk = "34"
 
 
 [libraries]
-ksp-gradle-plugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
+#ksp-gradle-plugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "android-lifecycle" }
