--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ android-lifecycle = "2.7.0"
 activity-compose = "1.9.0"
 compose-bom = "2024.05.00"
 compose-navigation = "2.7.7"
+detekt = "1.23.6"
 hilt = "2.50"
 retrofit = "2.9.0"
 androidxComposeCompiler = "1.5.10" # https://developer.android.com/jetpack/androidx/releases/compose-kotlin#pre-release_kotlin_compatibility
@@ -75,6 +76,7 @@ kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 cash-paparazzi = { id = "app.cash.paparazzi", version.ref = "paparazzi" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 
 #Convention Plugins
 start-android-application = { id = "start.android.application", version = "unspecified" }
