--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,30 +1,27 @@
 [versions]
 java = "17"
 agp = "8.5.0"
-kotlin = "1.9.22"
+kotlin = "2.0.0"
 androidGradlePlugin = "8.2.2"
 core-ktx = "1.13.1"
 junit = "4.13.2"
-androidx-test = "1.5.0"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
-android-lifecycle = "2.7.0"
+androidx-test = "1.6.1"
+androidx-test-ext-junit = "1.2.1"
+android-lifecycle = "2.8.3"
 activity-compose = "1.9.0"
-compose-bom = "2024.05.00"
+compose-bom = "2024.06.00"
 compose-navigation = "2.7.7"
 detekt = "1.23.6"
-hilt = "2.50"
+hilt = "2.51.1"
 retrofit = "2.9.0"
-androidxComposeCompiler = "1.5.10" # https://developer.android.com/jetpack/androidx/releases/compose-kotlin#pre-release_kotlin_compatibility
-kotlinxSerializationJson = "1.6.3"
-ksp = "1.9.22-1.0.17" # works with kotlin version 1.9.22
+kotlinxSerializationJson = "1.7.0"
+ksp = "2.0.0-1.0.22"
 paparazzi = "1.3.2"
 
 #SDK
 minSdk = "26"
 compileSdk = "34"
 targetSdk = "34"
-
 
 [libraries]
 #ksp-gradle-plugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
@@ -55,12 +52,11 @@ ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
-google-truth = { group = "com.google.truth", name = "truth", version = "1.1.5" }
+google-truth = { group = "com.google.truth", name = "truth", version = "1.4.2" }
 androidx-test-archcore = { group = "androidx.arch.core", name = "core-testing", version = "2.2.0" }
-turbine = { group = "app.cash.turbine", name = "turbine", version = "1.0.0" }
-mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version = "4.1.0" }
-kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version = "1.8.0" }
+turbine = { group = "app.cash.turbine", name = "turbine", version = "1.1.0" }
+mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version = "5.2.1" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version = "1.8.1" }
 androidx-core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "androidx-test" }
 paparazzi = { group = "app.cash.paparazzi", name = "paparazzi-gradle-plugin", version.ref = "paparazzi" }
 
@@ -72,11 +68,11 @@ android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", ver
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 cash-paparazzi = { id = "app.cash.paparazzi", version.ref = "paparazzi" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 #Convention Plugins
 start-android-application = { id = "start.android.application", version = "unspecified" }
