--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ compose-bom = "2024.06.00"
 compose-navigation = "2.7.7"
 detekt = "1.23.6"
 detektCompose = "0.4.5"
+grpc = "1.57.0"
 hilt = "2.51.1"
 retrofit = "2.9.0"
 kotlinxSerializationJson = "1.7.0"
@@ -45,8 +46,12 @@ compose-navigation = { group = "androidx.navigation", name = "navigation-compose
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 
-retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+#Network
+grpc-okhttp = { group = "io.grpc", name = "grpc-okhttp", version.ref = "grpc" }
+grpc-protobuf-lite = { group = "io.grpc", name = "grpc-protobuf-lite", version.ref = "grpc" }
+protobuf-lite = { group = "com.google.protobuf", name = "protobuf-lite", version = "3.23.0" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 
 #Test
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
